--- a/Abbohubb/templates/manage_doelgroepen.html
+++ b/Abbohubb/templates/manage_doelgroepen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beheer Doelgroepen</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Voeg je eigen CSS-bestand toe -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <style>
         body {
             font-family: Arial, sans-serif;
