--- a/Abbohubb/templates/contact.html
+++ b/Abbohubb/templates/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | AbboHub</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <style>
         /* Enkele basisstijlen (verplaats bij voorkeur naar styles.css) */
         body {
