--- a/Abbohubb/templates/manage_tags.html
+++ b/Abbohubb/templates/manage_tags.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beheer Tags</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Je eigen stylesheet -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <style>
         body {
             font-family: Arial, sans-serif;
